# llm_code_buddy_mcp

./: .dockerignore  .env.example  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  todo_list.md
docs/: cline_bot_integration.md  config.md
scripts/: dev  docker-run  docker-run-detached  docker-smoke  fmt  lint  test
src/: __init__.py  cli.py  llm.py  mcp_server.py
tests/: test_llm.py
